--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 		<title>Default</title>
 	</head>
 	<body>
-        <header><h1>Hey ya'll, it's me</h1></header>
-        <h2>ya girl, Adrianna</h2>
+        <header><h1>Hey ya'll, <b>it's me</b></h1></header>
+        <h2>ya girl, &#9734;adrianna&#9734;</h2>
         <p><h2>I'm nineteen, turning twenty this May. I'm not sure what to put so I'm just gonna explain my favorite pictures&#9825;.</h2></p>
-            <p><h3>Okay so my <i>first</i> picture is one that i edited recently. The girl's sstage name is Joy and this photo was taken for her promotions for the album called "The ReVe Festival" Finale. Its <em>really</em> good</h3></p>
+            <p><h3>Okay so my <i>first</i> picture is one that i edited recently. The girl's stage name is Joy and this photo was taken for her promotions for the album called "The ReVe Festival" Finale. Its <em>really</em> good</h3></p>
                 <img src="assets/images/joy.jpg"></img>
-            <p><h3>my second photo is one of a concert I went to that was behind my house. It was so much fun and I'm proud of this photo.</h3></p>
+<p><h3>my second photo is one of a concert I went to that was behind my house. It was so much fun and <strong>I'm proud</strong> of this photo.</h3></p>
                 <img src="assets/images/c.rose.jpg"></img>
-            <p><h3>My third photo is another I took at an Indian Culture festival going on downtown. It was beautiful and the foods were amazing.</h3></p>
+<p><h3>My third photo is another I took at an Indian Culture festival going on downtown. It was <i>beautiful</i> and the foods were amazing.</h3></p>
                 <img src="assets/images/YAE_0134.jpg"></img>
-            <p><h3>I really hope you enjoyed the photos as much as I enjoyed takig and editing them.</h3></p>
-            <footer><h4>Thank you and bye!</h4></footer>
+            <p><h3>I really hope you enjoyed the photos as much as I enjoyed taking and editing them.</h3></p>
+            <footer><h4>&#9728;Thank you and bye!&#9728;</h4></footer>
 
         
 	</body>
